--- a/assets/styles/form.css
+++ b/assets/styles/form.css
@@ -5,6 +5,9 @@
 body {
     background: #fff;
 }
+.displayPageAfterLoader {
+    display: none;
+}
 #form {
     box-shadow: 0px 4px 8px 0px #f1f1f1;
     background: #f2f2f2;
